# Even2

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.h  README.md  Searchable.h  Searcher.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  TenMatrixes.txt  main.cpp
